--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -18,7 +19,6 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.19.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
